--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Mental Health Awareness</title>
     
     <!-- Favicon -->
-    <link rel="icon" href="mental-health/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -41,6 +41,7 @@
             </div>
         </div>
     </nav>
+
     <!-- Hero Section -->
     <header class="bg-info text-white text-center p-5">
         <h1 class="display-4 fw-bold">Mental Health Awareness</h1>
@@ -57,19 +58,16 @@
     <div class="container my-5">
         <div class="row">
             <div class="col-md-4">
-                <img src="https://images.unsplash.com/photo-1585691330505-0079a635d1b6?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" 
-                    alt="Man holding his head in his hands" class="img-fluid rounded shadow">
-                <p class="text-center">Sad Man</p>
+                <img src="images/image1.jpg" 
+                    alt="Man holding his head in his hands" class="img-fluid rounded shadow" style="height: 300px; object-fit: cover; width: 100%;">
             </div>
             <div class="col-md-4">
-                <img src="https://images.unsplash.com/photo-1524008279390-81252c8b5be7?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" 
-                    alt="Man holding his head with both hands" class="img-fluid rounded shadow">
-                <p class="text-center">Sad Man</p>
+                <img src="images/image2.jpg" 
+                    alt="Man holding his head with both hands" class="img-fluid rounded shadow" style="height: 300px; object-fit: cover; width: 100%;">
             </div>
             <div class="col-md-4">
-                <img src="https://images.unsplash.com/photo-1500934529020-df3823c98e2d?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" 
-                    alt="Woman holding her head in her hands" class="img-fluid rounded shadow">
-                <p class="text-center">Sad Woman</p>
+                <img src="images/image3.jpg" 
+                    alt="Woman holding her head in her hands" class="img-fluid rounded shadow" style="height: 300px; object-fit: cover; width: 100%;">
             </div>
         </div>
     </div>
@@ -106,41 +104,10 @@
         </div>
     </section>
 
-    <!-- Support Resources Section -->
-    <section class="container my-5">
-        <div class="card shadow-lg border-light">
-            <div class="card-body">
-                <h2 class="card-title">Support Resources</h2>
-                <p class="card-text">If you or someone you know is struggling with mental health, it's important to seek help. Below are some resources you can turn to:</p>
-                <ul class="list-unstyled">
-                    <li><i class="bi bi-check-circle"></i> National Suicide Prevention Lifeline: 0800-273-TALK</li>
-                    <li><i class="bi bi-check-circle"></i> Therapists and Counselors: <a href="https://www.nhs.uk/mental-health/" target="_blank">Visit NHS Psychiatry Information</a></li>
-                    <li><i class="bi bi-check-circle"></i> Community Mental Health Support Groups: <a href="https://www.gov.uk/find-a-community-support-group-or-organisation" target="_blank">Find a Community Support Group or Organisation</a></li>
-                </ul>
-            </div>
-        </div>
-    </section>
-
     <!-- Positive Affirmations Section -->
     <section class="text-center bg-info text-white py-4">
         <h2 class="fw-bold">"You are stronger than you think!"</h2>
         <p class="fw-light">"Every small step matters."</p>
-    </section>
-
-    <!-- Contact Section -->
-    <section class="container my-5">
-        <h2 class="text-center mb-3">Get in Touch</h2>
-        <form class="mx-auto" style="max-width: 500px;">
-            <div class="mb-3">
-                <label for="email" class="form-label">Email Address</label>
-                <input type="email" class="form-control" id="email" placeholder="Enter your email" required>
-            </div>
-            <div class="mb-3">
-                <label for="description" class="form-label">Description</label>
-                <textarea class="form-control" id="description" rows="4" placeholder="Write your message here" required></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary w-100">Submit</button>
-        </form>
     </section>
 
     <!-- Footer -->
